# terminal

./: Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
include/: commands.h  defs.h
src/: commands.c  main.c  main.rs
