[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellwords = "1.1.0"
colored = "2.0.0"
chrono = "0.4.0"
ctrlc = "3.2.5"
sysinfo = "0.28.2"
sublime_fuzzy = "0.7.0"
clearscreen = "2.0.0"
dircpy = "0.3.14"